# mutinychat

./: .gitattributes  .gitignore  DESIGN_SYSTEM.md  IMPLEMENTATION_PLAN.md  MVP.md  PROJECT_RULES.md  READINESS_REPORT.md  README.md  VISION.md  osv-scanner.toml  package-lock.json  package.json
.github/workflows/: build-c2-nonce-artifact.yml  build-c2-patch-artifact.yml  c1-apply-audio.yml  ci.yml  resolve-pr17-conflicts.yml  windows-release.yml
backend/: main.py  mutinychat-backend-aarch64-apple-darwin.spec  participant_auth.py  participant_process_helper.py  requirements.txt  sidecar.py  test_connection_ownership.py  test_main.py  test_packaging_entrypoints.py  test_participant_auth.py  test_participant_handshake.py  test_participant_process_integration.py  test_sidecar.py
scripts/: apply-c1-audio-patch.mjs  apply-c2-nonce-binding.py  apply-c2-participant-auth.py  build-backend-sidecar.ps1  check-frontend-network-resources.mjs  check-release-policy.mjs  check-release-version.mjs  check-repository-artifacts.mjs  check-supply-chain-pins.mjs  check-tauri-csp.mjs  fix-c2-patch-script.py  postprocess-c2-generated.py  prepare-tor-windows.ps1  run-dependency-audit.sh  verify-windows-package.ps1
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: backendPoll.js  channelStatus.js  connectionStatus.js  frontendEvents.js  invitationClipboard.js  messageHistory.js  retroAudio.js  roomCreation.js  torStatus.js  usernamePrivacy.js
tests/frontend/: backendPoll.test.js  channelStatus.test.js  connectionStatus.test.js  (+6 more)
