[package]
name = "mutinychat"
version = "0.1.0"
description = "A retro-styled private chat app over Tor"
authors = ["Tommi"]
edition = "2021"

[lib]
name = "mutinychat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde_json = "1"
